# pyro

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  LIBRARY_LOADING.md  LICENSE.txt  README.md  STATUS.md  pyro.luau  pyro.toml  test-package.toml  test-rustc-package.toml
.cargo/: config.toml
.github/workflows/: build.yml  lint.yml
crates/pyro-ld/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/pyro-ld/.cargo/: config.toml
crates/pyro-ld/src/: allocator.rs  allocator_test.rs  elf.rs  intrinsics.rs  linker.rs  loader.rs  main.rs  relocation.rs  startup.rs  symbol.rs  syscall.rs
crates/pyro-ld/tests/: test.sh  test_allocator.sh  test_minimal.c
pyro/: Cargo.toml  builder.rs  cli.rs  config.rs  dependency.rs  environment.rs  isolation.rs  main.rs  rustc_builder.rs  store.rs  system.rs  ui.rs
smoltar/: lib.rs
src/pyro/: Cargo.toml  builder.rs  cli.rs  config.rs  main.rs  store.rs
src/pyro-tui/: main.rs  tree_ui.rs
src/pyro/builder/: fetch.rs  mod.rs
src/pyro/request/: git.rs  mod.rs  request.rs
src/smoltar/: main.rs
src/tar/: Cargo.toml  lib.rs  main.rs
