[package]
name = "pyro-linux"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "pyro"
path = "main.rs"

[dependencies]
petgraph = "0.8.2"
rand = "0.9.2"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "sync"] }
