[package]
name = "pyro-linux"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "pyro"
path = "main.rs"

[dependencies]
petgraph = "0.8.2"
rand = "0.9.2"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
git2 = "0.18"
tar = "0.4"
flate2 = "1.0"
url = "2.4"
futures-util = "0.3"
tempfile = "3.8"
tokio-util = { version = "0.7", features = ["io"] }
which = "4.4"
dirs = "5.0"
num_cpus = "1.16"
crossterm = "0.27"
