[package]
name = "pyro-ld"
version = "0.1.0"
edition = "2021"

[dependencies]
goblin = { version = "0.8", default-features = false, features = [
    "elf64",
    "elf32",
    "endian_fd",
] }
scroll = { version = "0.12", default-features = false }

[build-dependencies]
cbindgen = "0.27"

[[bin]]
name = "ld-pyro"
path = "src/main.rs"
