[package]
name = "pyro-linux"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "pyro"
path = "main.rs"

[dependencies]
petgraph = "0.8.2"
rand = "0.9.2"
# ratatui = { version = "0.29.0", features = ["all-widgets"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "stream",
] }
tar = "0.4"
flate2 = { version = "1.0", default-features = false, features = ["zlib-rs"] }
url = "2.4"
futures-util = "0.3"
tempfile = "3.8"
tokio-util = { version = "0.7", features = ["io"] }
which = "4.4"
dirs = "5.0"
num_cpus = "1.16"
crossterm = "0.27"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.12"
bytes = "1.10.1"
futures-core = "0.3.31"
async-trait = "0.1.88"

gix = { version = "0.73.0", features = [
    "zlib-rs",
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
    "worktree-mutation",
    "index",
    "tree-editor",
], default-features = false }
gix-hash = "0.19.0"
gix-index = "0.41.0"
gix-validate = "0.10.0"
gix-worktree = "0.42.0"
gix-worktree-state = "0.20.0"
mlua = { version = "0.11.1", features = ["serde", "luau", "serialize", "send"] }
blake3 = { version = "1.8.2", features = ["digest", "pure"] }
jiff = "0.2.15"
libsql = { version = "0.9.19", default-features = false, features = ["core"] }
