[package]
name = "smoltar"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE.txt"

[[bin]]
name = "tar"
path = "main.rs"

[lib]
name = "smoltar"
path = "lib.rs"
crate-type = ["dylib", "rlib"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
flate2 = { version = "1.1.2", features = ["zlib-rs"] }
ruzstd = "0.8.1"
tar = "0.4.44"

[features]
